--- a/index.html
+++ b/index.html
@@ -35,16 +35,20 @@
       </div><!-- /.container-fluid -->
     </nav>
     <!-- Main Page -->
-    <div class="container">
-        <div class="row show-grid">
-            <div class="col-md-6 gray">col-md-6</div>
-            <div class="col-md-6 gray">col-md-6</div>
+    <div class="CristoRey">
+    <img src="https://static.wixstatic.com/media/4553ad_68f8058e4b55401188a4a94c8a10a903~mv2.jpg/v1/fill/w_452,h_128,al_c,q_80,usm_0.66_1.00_0.01/4553ad_68f8058e4b55401188a4a94c8a10a903~mv2.jpg">
+    </div>
+    <div class="row show-grid">
+        <div class="column show-grid">
+            <div class="col-xs-3 black">Parents/Faculty</div>
+            <div class="col-xs-3 black">Student</div>
+            <div class="col-xs-3 black">Alumni</div>
+            <div class="col-xs-3 black">Faculty</div>
         </div>
-        <div class="row show-grid">
-            <div class="col-md-4 gray">col-md-4</div>
-            <div class="col-md-4 gray">col-md-4</div>
-            <div class="col-md-4 gray">col-md-4</div>
-        </div>
+        <div class="row show-grid col-xs-3">
+        <div class="col-md-1 black">col-xs-4</div>
+        <div class="col-md-1 black">col-xs-4</div>
+        <div class="col-md-1 black">col-xs-4</div>
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
